Fix deprecated API usage. Simplify code by using ReflectiveOperationException.